<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/contributionsListBackground"
    >

    <TextView
        android:id="@+id/noDataYet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_uploads"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_marginRight="@dimen/tiny_gap"
        android:layout_marginEnd="@dimen/tiny_gap"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_first_sync"
        android:id="@+id/waitingMessage"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/loadingContributionsProgressBar"
        />
    <GridView
        android:id="@+id/contributionsList"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:stretchMode="columnWidth"
        android:columnWidth="240dp"
        android:numColumns="auto_fit"
        android:listSelector="@null"
        android:fadingEdge="none"
        android:fastScrollEnabled="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_cameraa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:tint="@color/button_blue"
            android:visibility="invisible"
            app:backgroundTint="@color/main_background_light"
            app:elevation="6dp"
            app:fabSize="mini"
            android:layout_margin="8dp"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_photo_camera_white_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_galleryy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:tint="@color/button_blue"
            android:visibility="invisible"
            app:backgroundTint="@color/main_background_light"
            app:elevation="6dp"
            app:fabSize="mini"
            android:layout_margin="8dp"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_photo_white_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_pluss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:clickable="true"
            android:visibility="visible"
            app:backgroundTint="@color/status_bar_blue"
            app:elevation="12dp"
            app:fabSize="normal"
            android:layout_margin="8dp"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_add_white_24dp" />

    </LinearLayout>

</RelativeLayout>

